# friday

./: .gitignore  README.md  camera.py  capture.py  classifier.go  convert.py  convert.sh  converters.py  deploy_model.sh  download.py  fetch_data.sh  go.mod  go.sum  ig.py  infer.py  main.py  model.py  pyproject.toml  test.py  test_tflite.py  tflite.py  train.py
