[tool.poetry]
name = "fridaynet"
version = "0.1.0"
description = ""
authors = ["Tristan Rice <rice@fn.lc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.0"
torchvision = "^0.6.0"
gphotos-sync = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
