[tool.poetry]
name = "fridaynet"
version = "0.1.0"
description = ""
authors = ["Tristan Rice <rice@fn.lc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
torchvision = "^0.6.0"
gphotos-sync = "^2.14.0"
onnx = {path = "../onnx/dist/onnx-1.7.0-cp37-cp37m-linux_x86_64.whl"}
tensorflow = "2.2.0rc3"
onnx2keras = "^0.0.19"
xxhash = "^1.4.3"
tflite-runtime = {url = "https://dl.google.com/coral/python/tflite_runtime-2.1.0.post1-cp37-cp37m-linux_x86_64.whl"}
captum = "^0.2.0"
protobuf = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
